edited put method in patch and changed the logic